# rust-webapp-sample

./: .gitignore  Cargo.toml
.devcontainer/: Dockerfile  devcontainer.json  docker-compose.yml
migrations/: 20220918051413_add_users.up.sql  20220918060241_add_messages.down.sql  20220918060241_add_messages.up.sql  20220918060241_add_posts.up.sql
src/: main.rs
