[package]
name = "rust-chat"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
futures = "0.3"
sqlx = { version = "0.6", features = [ "runtime-actix-native-tls" , "postgres", "uuid", "chrono" ] }
dotenvy = "0.15.5"
env_logger = "0.9.1"
actix-session = { version = "0.7.2", features = ["cookie-session"] }
actix-identity = "0.5.2"
